src/z80asm/z80asm2/t/30-directive/expected/include_12.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/include_12.asm
Assembling t/30-directive/input/include_12.asm...
t/30-directive/input/include_12.asm:1:10: error: Expected filename after INCLUDE
    #include no input file
             ^
